<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/informationvariant"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="27dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="30dp"
        android:id="@+id/imageButton8" />

    <TextView
        android:text="@string/help_icon_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageButton8"
        android:layout_toRightOf="@+id/imageButton8"
        android:layout_toEndOf="@+id/imageButton8"
        android:layout_marginLeft="21dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="15dp"
        android:id="@+id/textView" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/map"
        android:layout_below="@+id/imageButton8"
        android:layout_alignRight="@+id/imageButton8"
        android:layout_alignEnd="@+id/imageButton8"
        android:id="@+id/imageButton10" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/translate"
        android:layout_below="@+id/imageButton10"
        android:layout_alignLeft="@+id/imageButton10"
        android:layout_alignStart="@+id/imageButton10"
        android:layout_marginTop="9dp"
        android:id="@+id/imageButton11" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/menu"
        android:layout_below="@+id/imageButton11"
        android:layout_alignLeft="@+id/imageButton11"
        android:layout_alignStart="@+id/imageButton11"
        android:id="@+id/imageButton12" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/star"
        android:layout_below="@+id/imageButton12"
        android:layout_alignRight="@+id/imageButton12"
        android:layout_alignEnd="@+id/imageButton12"
        android:id="@+id/imageButton13" />

    <TextView
        android:text="@string/help_icon_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageButton11"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_marginBottom="17dp"
        android:id="@+id/textView3" />

    <TextView
        android:text="@string/help_icon_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageButton11"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3"
        android:layout_marginTop="18dp"
        android:id="@+id/textView4" />

    <TextView
        android:text="@string/help_icon_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageButton13"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4"
        android:layout_marginBottom="17dp"
        android:id="@+id/textView5" />

    <TextView
        android:text="@string/help_icon_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageButton13"
        android:layout_alignLeft="@+id/textView5"
        android:layout_alignStart="@+id/textView5"
        android:layout_marginBottom="15dp"
        android:id="@+id/textView6" />
</RelativeLayout>